<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EMR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">Order</string>
    <string name="button2">Lab Test</string>
    <string name="button3">Clinical Document</string>
    <string name="button4">Medical History</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="autocompletetextview">autocomplete</string>
    <string name="loginlogo">logo of emr</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="address">Address:</string>
    <string name="patientphoto">Patient photo</string>
    <string name="search">Search</string>
    <string name="dob">D.O.B</string>
    <string name="upload">Upload</string>
    <string name="form">Form</string>
    <string name="bloodpressure">Blood Pressure</string>
    <string name="height">Height</string>
    <string name="weigth">Weight</string>
    <string name="bmi">BMI</string>
    <string name="temperature">Temperature</string>
    
</resources>