<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
        
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/search"
            android:src="@drawable/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1" 
        android:layout_above="@+id/linearLayout2">
    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80sp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/button4" />
    </LinearLayout>

</RelativeLayout>